--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,6 @@ license_file = LICENSE
 # bdist_wheel from trying to make a universal wheel. For more see:
 # https://packaging.python.org/tutorials/distributing-packages/#wheels
 universal=1
+
+[aliases]
+test=pytest
